--- a/common.fr.po
+++ b/common.fr.po
@@ -3,11 +3,11 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Gwlanbzh <aodren.legloanec@gmail.com>, 2020
+# Aodren Le Gloanec <aodren.legloanec@gmail.com>, 2020
 # Calinou, 2013-2014
 # Calinou <calinou9999@gmail.com>, 2012
 # Hugo Locurcio, 2014
-# Gwlanbzh <aodren.legloanec@gmail.com>, 2020
+# Aodren Le Gloanec <aodren.legloanec@gmail.com>, 2020
 # Hugo Locurcio, 2013-2014
 # Maxime Paradis <taximus.micro@gmail.com>, 2011
 # Mirio <opivy@hotmail.de>, 2017
