--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -1079,12 +1079,12 @@ msgstr "地图："
 #: qcsrc/client/hud/panel/scoreboard.qc:2467
 #, c-format
 msgid "Speed award: %d%s ^7(%s^7)"
-msgstr "速度奖励：%d%s ^7(%s^7)"
+msgstr "速度领先：%d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2471
 #, c-format
 msgid "All-time fastest: %d%s ^7(%s^7)"
-msgstr "一直领先：%d%s ^7(%s^7)"
+msgstr "史上最快：%d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2505
 #, c-format
@@ -2178,7 +2178,7 @@ msgstr "隐身"
 #: qcsrc/common/mutators/mutator/powerups/powerup/shield.qh:48
 #: qcsrc/common/mutators/mutator/powerups/powerup/shield.qh:57
 msgid "Shield"
-msgstr "护盾"
+msgstr "神佑"
 
 #: qcsrc/common/mutators/mutator/powerups/powerup/speed.qh:48
 #: qcsrc/common/mutators/mutator/powerups/powerup/speed.qh:51
@@ -3221,17 +3221,17 @@ msgstr "^BG%s^K1 捡到了隐身"
 #: qcsrc/common/notifications/all.inc:417
 #, c-format
 msgid "^BG%s^K1 picked up Shield"
-msgstr "^BG%s^K1 捡到了护盾"
+msgstr "^BG%s^K1 拿到了神佑"
 
 #: qcsrc/common/notifications/all.inc:418
 #, c-format
 msgid "^BG%s^K1 picked up Speed"
-msgstr "^BG%s^K1 捡到了加速"
+msgstr "^BG%s^K1 拿到了加速"
 
 #: qcsrc/common/notifications/all.inc:419
 #, c-format
 msgid "^BG%s^K1 picked up Strength"
-msgstr "^BG%s^K1 捡到了神力"
+msgstr "^BG%s^K1 拿到了神力"
 
 #: qcsrc/common/notifications/all.inc:421
 #, c-format
@@ -4520,11 +4520,11 @@ msgstr "^F2神力已解除"
 
 #: qcsrc/common/notifications/all.inc:760
 msgid "^F2Shield surrounds you"
-msgstr "^F2护盾环绕着你"
+msgstr "^F2神佑盾环绕着你"
 
 #: qcsrc/common/notifications/all.inc:761
 msgid "^F2Shield has worn off"
-msgstr "^F2护盾已解除"
+msgstr "^F2神佑盾已解除"
 
 #: qcsrc/common/notifications/all.inc:763
 msgid "^F2You are on speed"
@@ -5884,7 +5884,7 @@ msgstr "动画"
 
 #: qcsrc/menu/xonotic/credits.qc:54
 msgid "Campaign"
-msgstr "任务"
+msgstr "战役"
 
 #: qcsrc/menu/xonotic/credits.qc:57
 msgid "Level Design"
@@ -9741,7 +9741,7 @@ msgstr "即刻行动！（与电脑玩家随机游戏）"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:169
 msgid "Campaign Difficulty:"
-msgstr "任务难度："
+msgstr "战役难度："
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:170
 msgid "CSKL^Easy"
@@ -9757,7 +9757,7 @@ msgstr "困难"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:177
 msgid "Play campaign!"
-msgstr "开始任务！"
+msgstr "开始战役！"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qh:6
 msgid "Singleplayer"
@@ -9765,7 +9765,7 @@ msgstr "单人游戏"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qh:7
 msgid "Play the singleplayer campaign or instant action matches against bots"
-msgstr "游玩单人任务，或者即刻行动对抗电脑玩家"
+msgstr "游玩单人战役，或者即刻行动对抗电脑玩家"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer_winner.qh:7
 msgid "Winner"
@@ -9826,11 +9826,11 @@ msgstr "如果回答“否”，你将会以“匿名玩家”的形式出现"
 
 #: qcsrc/menu/xonotic/gametypelist.qc:88
 msgid "teamplay"
-msgstr "合作模式"
+msgstr "团队竞技"
 
 #: qcsrc/menu/xonotic/gametypelist.qc:90
 msgid "free for all"
-msgstr "自由战役"
+msgstr "自由竞技"
 
 #: qcsrc/menu/xonotic/keybinder.qc:35
 msgid "Moving"
@@ -9998,7 +9998,7 @@ msgstr "停止演示"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:16
 msgid "Leave campaign"
-msgstr "离开任务"
+msgstr "离开战役"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:18
 msgid "Leave singleplayer"
@@ -10010,7 +10010,7 @@ msgstr "离开多人游戏"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:28
 msgid "Leave current campaign level"
-msgstr "离开当前任务关卡"
+msgstr "离开当前战役关卡"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:30
 msgid "Leave current singleplayer match"
@@ -10022,7 +10022,7 @@ msgstr "离开当前多人竞赛 / 断开与服务器的连接"
 
 #: qcsrc/menu/xonotic/mainwindow.qc:76 qcsrc/menu/xonotic/mainwindow.qc:79
 msgid "Do not press this button again!"
-msgstr "不要再按这个按钮 ！"
+msgstr "不要再按这个按钮！"
 
 #: qcsrc/menu/xonotic/maplist.qc:294
 msgid ""
@@ -10054,7 +10054,7 @@ msgstr "取消收藏"
 
 #: qcsrc/menu/xonotic/serverlist.qc:263
 msgid "Remove the currently highlighted server from bookmarks"
-msgstr "从书签中移除所选择的服务器"
+msgstr "从书签中移除所选服务器"
 
 #: qcsrc/menu/xonotic/serverlist.qc:267
 msgid "SERVER^Favorite"
@@ -10064,7 +10064,7 @@ msgstr "收藏"
 msgid ""
 "Bookmark the currently highlighted server so that it's faster to find in the "
 "future"
-msgstr "收藏当前选择的服务器以便日后查找"
+msgstr "收藏所选服务器以便日后查找"
 
 #: qcsrc/menu/xonotic/serverlist.qc:754
 msgid "Ping"
@@ -10136,7 +10136,7 @@ msgstr "有修改的服务器"
 
 #: qcsrc/menu/xonotic/serverlist.qh:158
 msgid "SLCAT^Overkill"
-msgstr "绝灭模式"
+msgstr "Overkill（绝灭模式）"
 
 #: qcsrc/menu/xonotic/serverlist.qh:159
 msgid "SLCAT^InstaGib"
@@ -10144,7 +10144,7 @@ msgstr "InstaGib（瞬杀）"
 
 #: qcsrc/menu/xonotic/serverlist.qh:160
 msgid "SLCAT^Defrag Mode"
-msgstr "Defrag/无杀戮模式"
+msgstr "Defrag（无杀戮模式）"
 
 #: qcsrc/menu/xonotic/skinlist.qc:70
 msgid "<TITLE>"
