--- a/common.zh_HK.po
+++ b/common.zh_HK.po
@@ -1073,12 +1073,12 @@ msgstr "地圖："
 #: qcsrc/client/hud/panel/scoreboard.qc:2467
 #, c-format
 msgid "Speed award: %d%s ^7(%s^7)"
-msgstr "速度獎勵：%d%s ^7(%s^7)"
+msgstr "速度領先：%d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2471
 #, c-format
 msgid "All-time fastest: %d%s ^7(%s^7)"
-msgstr "一直領先：%d%s ^7(%s^7)"
+msgstr "史上最快：%d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2505
 #, c-format
@@ -2172,7 +2172,7 @@ msgstr "隱身"
 #: qcsrc/common/mutators/mutator/powerups/powerup/shield.qh:48
 #: qcsrc/common/mutators/mutator/powerups/powerup/shield.qh:57
 msgid "Shield"
-msgstr "護盾"
+msgstr "神佑"
 
 #: qcsrc/common/mutators/mutator/powerups/powerup/speed.qh:48
 #: qcsrc/common/mutators/mutator/powerups/powerup/speed.qh:51
@@ -3215,17 +3215,17 @@ msgstr "^BG%s^K1 撿到了隱身"
 #: qcsrc/common/notifications/all.inc:417
 #, c-format
 msgid "^BG%s^K1 picked up Shield"
-msgstr "^BG%s^K1 撿到了護盾"
+msgstr "^BG%s^K1 拿到了神佑"
 
 #: qcsrc/common/notifications/all.inc:418
 #, c-format
 msgid "^BG%s^K1 picked up Speed"
-msgstr "^BG%s^K1 撿到了加速"
+msgstr "^BG%s^K1 拿到了加速"
 
 #: qcsrc/common/notifications/all.inc:419
 #, c-format
 msgid "^BG%s^K1 picked up Strength"
-msgstr "^BG%s^K1 撿到了神力"
+msgstr "^BG%s^K1 拿到了神力"
 
 #: qcsrc/common/notifications/all.inc:421
 #, c-format
@@ -4514,11 +4514,11 @@ msgstr "^F2神力已解除"
 
 #: qcsrc/common/notifications/all.inc:760
 msgid "^F2Shield surrounds you"
-msgstr "^F2護盾環繞着你"
+msgstr "^F2神佑盾環繞着你"
 
 #: qcsrc/common/notifications/all.inc:761
 msgid "^F2Shield has worn off"
-msgstr "^F2護盾已解除"
+msgstr "^F2神佑盾已解除"
 
 #: qcsrc/common/notifications/all.inc:763
 msgid "^F2You are on speed"
@@ -5878,7 +5878,7 @@ msgstr "動畫"
 
 #: qcsrc/menu/xonotic/credits.qc:54
 msgid "Campaign"
-msgstr "任務"
+msgstr "戰役"
 
 #: qcsrc/menu/xonotic/credits.qc:57
 msgid "Level Design"
@@ -9735,7 +9735,7 @@ msgstr "即刻行動！（與電腦玩家隨機遊戲）"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:169
 msgid "Campaign Difficulty:"
-msgstr "任務難度："
+msgstr "戰役難度："
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:170
 msgid "CSKL^Easy"
@@ -9751,7 +9751,7 @@ msgstr "困難"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:177
 msgid "Play campaign!"
-msgstr "開始任務！"
+msgstr "開始戰役！"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qh:6
 msgid "Singleplayer"
@@ -9759,7 +9759,7 @@ msgstr "單人遊戲"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer.qh:7
 msgid "Play the singleplayer campaign or instant action matches against bots"
-msgstr "遊玩單人任務，或者即刻行動對抗電腦玩家"
+msgstr "遊玩單人戰役，或者即刻行動對抗電腦玩家"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer_winner.qh:7
 msgid "Winner"
@@ -9820,11 +9820,11 @@ msgstr "如果回答“否”，你將會以“匿名玩家”的形式出現"
 
 #: qcsrc/menu/xonotic/gametypelist.qc:88
 msgid "teamplay"
-msgstr "合作模式"
+msgstr "團隊競技"
 
 #: qcsrc/menu/xonotic/gametypelist.qc:90
 msgid "free for all"
-msgstr "自由戰役"
+msgstr "自由競技"
 
 #: qcsrc/menu/xonotic/keybinder.qc:35
 msgid "Moving"
@@ -9992,7 +9992,7 @@ msgstr "停止演示"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:16
 msgid "Leave campaign"
-msgstr "離開任務"
+msgstr "離開戰役"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:18
 msgid "Leave singleplayer"
@@ -10004,7 +10004,7 @@ msgstr "離開多人遊戲"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:28
 msgid "Leave current campaign level"
-msgstr "離開當前任務關卡"
+msgstr "離開當前戰役關卡"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:30
 msgid "Leave current singleplayer match"
@@ -10016,7 +10016,7 @@ msgstr "離開當前多人競賽 / 斷開與服務器的連接"
 
 #: qcsrc/menu/xonotic/mainwindow.qc:76 qcsrc/menu/xonotic/mainwindow.qc:79
 msgid "Do not press this button again!"
-msgstr "不要再按這個按鈕 ！"
+msgstr "不要再按這個按鈕！"
 
 #: qcsrc/menu/xonotic/maplist.qc:294
 msgid ""
@@ -10048,7 +10048,7 @@ msgstr "取消收藏"
 
 #: qcsrc/menu/xonotic/serverlist.qc:263
 msgid "Remove the currently highlighted server from bookmarks"
-msgstr "從書籤中移除所選擇的服務器"
+msgstr "從書籤中移除所選服務器"
 
 #: qcsrc/menu/xonotic/serverlist.qc:267
 msgid "SERVER^Favorite"
@@ -10058,7 +10058,7 @@ msgstr "收藏"
 msgid ""
 "Bookmark the currently highlighted server so that it's faster to find in the "
 "future"
-msgstr "收藏當前選擇的服務器以便日後查找"
+msgstr "收藏所選服務器以便日後查找"
 
 #: qcsrc/menu/xonotic/serverlist.qc:754
 msgid "Ping"
@@ -10130,7 +10130,7 @@ msgstr "有修改的服務器"
 
 #: qcsrc/menu/xonotic/serverlist.qh:158
 msgid "SLCAT^Overkill"
-msgstr "絕滅模式"
+msgstr "Overkill（絕滅模式）"
 
 #: qcsrc/menu/xonotic/serverlist.qh:159
 msgid "SLCAT^InstaGib"
@@ -10138,7 +10138,7 @@ msgstr "InstaGib（瞬殺）"
 
 #: qcsrc/menu/xonotic/serverlist.qh:160
 msgid "SLCAT^Defrag Mode"
-msgstr "Defrag/無殺戮模式"
+msgstr "Defrag（無殺戮模式）"
 
 #: qcsrc/menu/xonotic/skinlist.qc:70
 msgid "<TITLE>"
